<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
        name="order"
        type="com.techbros.traine.viewModels.OrderViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    tools:context=".TrainingSimulationActivity"
    tools:showIn="@layout/activity_training_simulation">

    <ImageView
        android:id="@+id/back_ground_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/raw_coffee"
        android:scaleType="centerCrop"/>

    <NumberPicker
        android:id="@+id/number_of_shots_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:theme="@style/NumberPickerTheme"
        android:fontFamily="sans-serif"
        android:text="@string/number_of_shots"
        app:layout_constraintBottom_toTopOf="@+id/shot_pull_time_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shots_text_view" />

    <TextView
        android:id="@+id/train_e_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002" />

    <TextView
        android:id="@+id/shot_pull_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/shot_pull_time"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/good_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_of_shots_picker" />

    <Button
        android:id="@+id/good_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="sans-serif"
        android:text="@string/good"
        android:textColor="@android:color/black"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bad_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bad_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:fontFamily="sans-serif"
        android:text="@string/bad"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/good_button" />

    <ImageView
        android:id="@+id/rectangle_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/train_e_text_view" />

    <ImageView
        android:id="@+id/rectangle_thin_dark_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle_thin_dark_grey"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_grey"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_grey"
        app:layout_constraintStart_toStartOf="@+id/rectangle_grey" />

    <ImageView
        android:id="@+id/red_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/red_dot"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_thin_red"
        app:layout_constraintEnd_toStartOf="@+id/coffee_name"
        app:layout_constraintStart_toStartOf="@+id/rectangle_grey"
        app:layout_constraintBottom_toTopOf="@+id/specification_text_view"
        tools:layout_editor_absoluteY="118dp" />

    <TextView
        android:id="@+id/coffee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@{order.name}"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/specification_text_view"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_grey"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/rectangle_grey"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_thin_red" />

    <TextView
        android:id="@+id/specification_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@{order.specification}"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_thin_dark_grey"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_grey"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="@+id/rectangle_grey"
        app:layout_constraintTop_toBottomOf="@+id/coffee_name" />

    <ImageView
        android:id="@+id/rectangle_thin_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle_thin_red"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_grey"
        app:layout_constraintStart_toStartOf="@+id/rectangle_grey"
        app:layout_constraintTop_toTopOf="@+id/rectangle_grey" />

    <TextView
        android:id="@+id/destination_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/drive_thru"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_thin_red"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_thin_red"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/rectangle_thin_red"
        app:layout_constraintTop_toTopOf="@+id/rectangle_thin_red" />

    />

    />

    <TextView
        android:id="@+id/shots_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/shots"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/number_of_shots_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_grey" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>